--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
   <!-- Tab Content: Home -->
   <div id="home" class="tab-content active">
     <div class="slider">
-      <img class="slides" src="images/i1.jpg" alt="Slide 1">
-      <img class="slides" src="images/i2.jpg" alt="Slide 2">
-      <img class="slides" src="images/i3.jpg" alt="Slide 3">
+      <img class="slides" src="i1.jpg" alt="Slide 1">
+      <img class="slides" src="i2.jpg" alt="Slide 2">
+      <img class="slides" src="i3.jpg" alt="Slide 3">
     </div>
 
     <section id="about">
