--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gagan Texture and Designers</title>
+  <title>Texture and Designers</title>
+  <link rel="icon" href="favicon.png" type="image/png">
   <style>
     body {
       margin: 0;
@@ -65,7 +66,8 @@
       display: none;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
+background-color: #86b0dd; 
       animation: fade 1s;
     }
 
@@ -120,7 +122,7 @@
 
   <!-- Navbar -->
   <div class="navbar">
-    <h1>Gagan Texture and Designers</h1>
+    <h1><img src="favicon.png" height="20px">  Gagan Texture and Designers</h1>
     <div class="menu-icon" onclick="toggleMenu()">☰</div>
   </div>
 
@@ -132,9 +134,13 @@
   <!-- Tab Content: Home -->
   <div id="home" class="tab-content active">
     <div class="slider">
-      <img class="slides" src="i1.jpg" alt="Slide 1">
-      <img class="slides" src="i2.jpg" alt="Slide 2">
-      <img class="slides" src="i3.jpg" alt="Slide 3">
+      <img class="slides" src="images/i1.jpg" alt="Slide 1">
+      <img class="slides" src="images/i2.png" alt="Slide 2">
+      <img class="slides" src="images/i3.jpg" alt="Slide 3">
+      <img class="slides" src="images/i4.jpg" alt="Slide 4">
+      <img class="slides" src="images/i5.jpg" alt="Slide 5">
+      <img class="slides" src="images/i6.jpg" alt="Slide 6">
+      <img class="slides" src="images/i7.jpg" alt="Slide 7">
     </div>
 
     <section id="about">
