--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
   <!-- Home Tab -->
   <div id="home" class="tab-content active">
     <div class="slider">
-      <img class="slides" src="images/i1.jpg" alt="Slide 1">
-      <img class="slides" src="images/i2.png" alt="Slide 2">
-      <img class="slides" src="images/i3.jpg" alt="Slide 3">
-      <img class="slides" src="images/i4.jpg" alt="Slide 4">
-      <img class="slides" src="images/i5.jpg" alt="Slide 5">
-      <img class="slides" src="images/i6.jpg" alt="Slide 6">
-      <img class="slides" src="images/i7.jpg" alt="Slide 7">
+      <img class="slides" src="i1.jpg" alt="Slide 1">
+      <img class="slides" src="i2.png" alt="Slide 2">
+      <img class="slides" src="i3.jpg" alt="Slide 3">
+      <img class="slides" src="i4.jpg" alt="Slide 4">
+      <img class="slides" src="i5.jpg" alt="Slide 5">
+      <img class="slides" src="i6.jpg" alt="Slide 6">
+      <img class="slides" src="i7.jpg" alt="Slide 7">
     </div>
 
     <section id="about">
