--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Texture and Designers</title>
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" type="image/png" href="favicon.png" >
+   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.192.png" >
+   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" >
   <style>
     body {
       margin: 0;
