--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/png" href="favicon.png" >
    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.192.png" >
    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" >
+  <link rel="manifest" href="/manifest.json">
+
   <style>
     body {
       margin: 0;
