--- a/index.html
+++ b/index.html
@@ -335,6 +335,12 @@
       });
       button.classList.add('active');
     }
+     if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("service-worker.js")
+      .then(reg => console.log("Service Worker registered:", reg.scope))
+      .catch(err => console.log("Service Worker registration failed:", err));
+  }
+
   </script>
 
 </body>
