--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="favicon.png" >
    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" >
    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png" >
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="/gaganatexture/manifest.json">
 
   <style>
     body {
