--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" >
    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png" >
   <link rel="manifest" href="/gaganatexture/manifest.json">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     body {
       margin: 0;
@@ -155,7 +155,7 @@
   <!-- Navbar -->
   <div class="navbar">
     <h1><img src="favicon.png" height="20px">  Gagan Texture and Designers</h1>
-    <div class="menu-icon" onclick="shareSite()">🔗</div>
+    <div class="menu-icon" onclick="shareSite()"><i class="fas fa-share-alt"></i></div>
   </div>
 
  
