--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
   <!-- Navbar -->
   <div class="navbar">
-    <h1><img src="favicon.png" height="20px">  Gagan Texture and Designers</h1>
+    <h1><img src="favicon.png" height="20px">  Gagana Texture and Designers</h1>
     <div class="menu-icon" onclick="shareSite()"><i class="fas fa-share-alt"></i></div>
   </div>
 
