--- a/index.html
+++ b/index.html
@@ -179,8 +179,9 @@
 
     <section id="contact">
       <h2>Contact Us</h2>
-      <p>Email: contact@gagandesign.com</p>
-      <p>Phone: +91-1234567890</p>
+      <p>Email: swamy008@gmail.com.com</p>
+      <p>Phone: +91-8105939912</p>
+            <p> +91-7349780912</p>
     </section>
   </div>
 
