--- a/index.html
+++ b/index.html
@@ -148,6 +148,67 @@
   border: 1px solid #ccc;
   border-radius: 5px;
     }
+  .video-wrapper {
+      position: relative;
+      padding-bottom: 56.25%;
+      height: 0;
+      overflow: hidden;
+      margin-top: 20px;
+    }
+
+    .video-frame {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0.4;
+      transition: opacity 0.3s ease;
+      pointer-events: none;
+    }
+
+    #fl {
+      text-align: center;
+    }
+
+    #fl p {
+      margin-left: 32%;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+    }
+#fl p a{
+      padding-left:10px;
+padding-right:10px;
+
+    }
+
+    #about, #contact {
+      text-align: center;
+}
+.texture-type{
+font-size:50px;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+font-style: oblique;
+color:red;
+
+}
+#textures
+{
+  background-color: rgb(140, 140, 237);
+  text-align: center;
+  font-size: 20px;
+  
+}
+.texture-type li{
+height: 100px;
+border: 2px solid blue;
+margin: 20px;
+background-color: aliceblue;
+border-radius: 10px;
+padding: 20px;
+list-style: none;
+}
   </style>
 </head>
 <body>
@@ -171,6 +232,11 @@
       <img class="slides" src="i6.jpg" alt="Slide 6">
       <img class="slides" src="i7.jpg" alt="Slide 7">
     </div>
+<h3>Watch Our Work</h3>
+    <div class="video-wrapper">
+      <div id="player" class="video-frame"></div>
+    </div>
+
 
     <section id="about">
       <h2>About Us</h2>
@@ -183,6 +249,16 @@
       <p>Phone: +91-8105939912</p>
             <p> +91-7349780912</p>
     </section>
+<div id="fl">
+      <h3>Follow Us</h3>
+      <p>
+        <a href="https://www.facebook.com/share/193WVDPt4C/"><i class="fab fa-facebook"></i> Facebook</a>
+        <a href="https://g.co/kgs/DzG2cLv"><i class="fas fa-map-marker-alt"></i> Google Maps</a>
+        <a href="https://www.instagram.com/gagana_texture_designer_12?igsh=ODd3NWZzZ3hjM290" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+        <a href="https://youtube.com/@gaganatexturedesigner?si=a2J1vOJYIVGQ_b2a" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+      </p>
+    </div>
+
   </div>
 
   <!-- Textures Tab -->
@@ -190,6 +266,16 @@
     <section>
       <h2>Textures</h2>
       <p>Explore a wide variety of wall and surface textures.</p>
+	<div class="texture-type">
+    <ul><li>Bubble texture design</li>
+            <li>Plus texture design</li>
+      <li>Vertical texture design</li>
+      <li>horizontal texture design</li>
+      <li>Rain drop texture design</li>
+<li>Zig zag texture design</li>
+<li>Roller texture design</li>
+ </ul>
+</div>
     </section>
   </div>
 
@@ -352,8 +438,42 @@
       alert('Sharing is not supported on this browser. Copy the URL manually.');
     }
   }
+ let tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/iframe_api";
+    let firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
+    let player;
 
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('player', {
+        videoId: 'y93AOo9tz2M',
+        playerVars: {
+          autoplay: 1,
+          controls: 0,
+          mute: 1,
+          modestbranding: 1,
+          rel: 0,
+          loop: 1,
+          playlist: 'y93AOo9tz2M'
+        },
+        events: {
+          'onReady': function(event) {
+            event.target.playVideo();
+            document.querySelector('.video-frame').style.opacity = "1";
+          },
+          'onStateChange': onPlayerStateChange
+        }
+      });
+    }
+
+    function onPlayerStateChange(event) {
+      if (event.data === YT.PlayerState.PLAYING) {
+        document.querySelector('.video-frame').style.opacity = "1";
+      } else {
+        document.querySelector('.video-frame').style.opacity = "0.4";
+      }
+    }
   </script>
 
 </body>
