--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@ background:url('roller.jpg');
       <img class="slides" src="i1.jpg">
       <img class="slides" src="i2.png">
       <img class="slides" src="i3.jpg">
+      <img class="slides" src="i4.jpg">
+      <img class="slides" src="i5.jpg">
+      <img class="slides" src="i6.jpg">
+      <img class="slides" src="i7.jpg">
     </div>
 
     <h3>Watch Our Work</h3>
