--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ background:url('roller.jpg');
   width: 100%;
   flex-shrink: 0;
   object-fit: contain;
-  height: 300px;
+  height: 20%;
   border-radius: 10px;
 }
 
