--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ background:url('roller.jpg');
 }
 
 
-    /* Responsive CSS */
+    /* Responsive CSS 
     @media (max-width: 768px) {
       .navbar {
         flex-direction: column;
@@ -255,7 +255,7 @@ background:url('roller.jpg');
         font-size: 14px;
         padding: 8px;
       }
-    }
+    }*/
     .carousel {
      margin-left:25%; 
   width: 50%;
