--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@ background:url('roller.jpg');
 }
 
 
-    /* Responsive CSS 
+    Responsive CSS 
     @media (max-width: 768px) {
-      .navbar {
+    /*  .navbar {
         flex-direction: column;
         align-items: flex-start;
       }
@@ -235,7 +235,7 @@ background:url('roller.jpg');
         font-size: 16px;
         padding: 10px;
       }
-
+*/
       .texture-type {
         font-size: 24px;
       }
@@ -255,7 +255,7 @@ background:url('roller.jpg');
         font-size: 14px;
         padding: 8px;
       }
-    }*/
+    }
     .carousel {
      margin-left:25%; 
   width: 50%;
