--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ background:url('raindrop.jpg');
 background:url('zigzag.jpg');
 }
 #t7{
-background:url('roller.jpg');
+background-color:gray;
 }
 
 
