--- a/index.html
+++ b/index.html
@@ -282,6 +282,38 @@ background-color:gray;
 .carousel:hover {
   cursor: pointer;
 }
+.floating-call-button {
+      position: fixed;
+      bottom:50px;
+      right: 20px;
+      background: linear-gradient(45deg, #00c6ff, #0072ff);
+      color: white;
+      padding: 15px 20px;
+      font-size: 18px;
+      font-weight: bold;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+      transition: all 0.3s ease;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      z-index: 1000;
+    }
+
+    .floating-call-button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3);
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 600px) {
+      .floating-call-button {
+        padding: 12px 16px;
+        font-size: 16px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -447,7 +479,9 @@ background-color:gray;
       </div>
     </section>
   </div>
-
+<button class="floating-call-button" onclick="callNow()">
+    <i class="fas fa-phone-alt"></i> Call Now
+  </button>
   <!-- Bottom Nav -->
   <div class="bottom-nav">
     <button class="active" onclick="switchTab('home', this)">Home</button>
@@ -545,6 +579,9 @@ background-color:gray;
   document.querySelector('.carousel').addEventListener('mouseleave', () => {
     slideInterval = setInterval(slideImages, 3000);
   });
+function callNow() {
+      window.location.href = "tel:+918105939912"; // Replace with your actual phone number
+    }
   </script>
 </body>
 </html>
